fixed the icons alignement inside tabs

--- a/src/less/navigation/tabs.less
+++ b/src/less/navigation/tabs.less
@@ -56,7 +56,13 @@
   }
 }
 
-// Alignes the text with the tabs.
+// Adjusts the icon alignment inside a tab.
+.list.tabs > li > a [class^="icon-"] {
+  float: left;
+  margin-top: -1px;
+}
+
+// Adjusts the icon alignment inside a span.
 .list.tabs > li > span [class^="icon-"] {
   float: left;
   margin-top: 1px;
